--- a/final-vanblaricom/assets/pets.css
+++ b/final-vanblaricom/assets/pets.css
@@ -6,6 +6,11 @@ h1 {
   color:rgb(131, 180, 139);
 }
 
+ul {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
 .oliver {
   grid-area: oliver;
 }
@@ -28,4 +33,19 @@ h1 {
 
 .luna {
   grid-area: luna;
+}
+
+button {
+  color:rgb(131, 180, 139);
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  grid-template-areas: 
+  "oliver lucy"
+  "bob george"
+  "ivy luna" ;
 }
